src/logs/exceptions.log
2015-03-29T17:54:38.752Z - error: uncaughtException: /Users/admin/Code/engineering-blogs/src/controllers/index.js:15
   'http://eng.joingrouper.com', //good
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Unexpected string date=Sun Mar 29 2015 13:54:38 GMT-0400 (EDT), pid=18784, uid=501, gid=20, cwd=/Users/admin/Code/engineering-blogs, execPath=/Users/admin/.nvm/v0.12.0/bin/node, version=v0.12.0, argv=[node, /Users/admin/Code/engineering-blogs/src/index.js], rss=49119232, heapTotal=34693888, heapUsed=18038160, loadavg=[2.16064453125, 2.43115234375, 2.91015625], uptime=1304852, trace=[column=16, file=vm.js, function=exports.runInThisContext, line=73, method=runInThisContext, native=false, column=25, file=module.js, function=Module._compile, line=443, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false, column=32, file=module.js, function=Module.load, line=355, method=load, native=false, column=12, file=module.js, function=Function.Module._load, line=310, method=Module._load, native=false, column=17, file=module.js, function=Module.require, line=365, method=require, native=false, column=17, file=module.js, function=require, line=384, method=null, native=false, column=13, file=/Users/admin/Code/engineering-blogs/src/routes.js, function=, line=2, method=null, native=false, column=26, file=module.js, function=Module._compile, line=460, method=_compile, native=false, column=10, file=module.js, function=Object.Module._extensions..js, line=478, method=Module._extensions..js, native=false], stack=[/Users/admin/Code/engineering-blogs/src/controllers/index.js:15,    'http://eng.joingrouper.com', //good,    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^, SyntaxError: Unexpected string,     at exports.runInThisContext (vm.js:73:16),     at Module._compile (module.js:443:25),     at Object.Module._extensions..js (module.js:478:10),     at Module.load (module.js:355:32),     at Function.Module._load (module.js:310:12),     at Module.require (module.js:365:17),     at require (module.js:384:17),     at Object.<anonymous> (/Users/admin/Code/engineering-blogs/src/routes.js:2:13),     at Module._compile (module.js:460:26),     at Object.Module._extensions..js (module.js:478:10)]
